# SCMessenger

./: .claudeignore  .clinerules  .clippy.toml  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .tarpaulin.toml  AGENTS.md  ALMOST_DONE_ORCHESTRATION_PROMPT.md  ANDROID_BUILD_RESOLUTION.md  ANDROID_CONTACT_PERSISTENCE_FIX.md  ANDROID_DELIVERY_ISSUES_2026-03-10.md  ANDROID_DISCOVERY_ISSUES.md  ANDROID_FIX_PLAN_2026-03-14.md  ANDROID_ID_MISMATCH_RCA.md  ANDROID_MESSAGE_PERSISTENCE_INVESTIGATION.md  ANDROID_SEND_QUEUEING_FIX.md  ANDROID_UI_SPACING_FIX.md  API_EFFICIENCY_LEDGER.md  API_LIMIT_MANAGEMENT_PLAN.md  APP_VERSION_0.1.2_ALPHA_PLAN.md  ARCHITECTURE.md  AUDIT_CONTACT_PERSISTENCE_2026-03-14.md  AUDIT_DRIFTNET.md  AUDIT_QUICK_REFERENCE.md  AUDIT_REPORT_PHASE5.md  AUDIT_RESOLUTIONS.md  AUDIT_SUMMARY_QUICK_REFERENCE.md  BACKUP_AGENTS.md  BEFORE_AFTER_COMPARISON.md  BLE_DEADOBJECT_BUG.md  BLE_FALSE_DELIVERY_BUG.md  BLOCKING_AND_PLATFORM_AUDIT_2026-03-10.md  BOB_MISSION_BRIEF_V1_0_0.md  BOOTSTRAP.md  BRANCH_AUDIT_REPORT.md  BRANCH_CLEANUP.md  CASE_SENSITIVITY_AUDIT_2026-03-09.md  CELLULAR_NAT_SOLUTION.md  (+202 more)
.cargo/: config.toml
.claude/: API_CONSUMPTION_OPTIMIZATION_AUDIT.md  API_QUOTA_STATE.md  agent_pool.json  local_orchestrator_config.sh  model_capability_mapping.json  model_validation_template.sh  orchestration_config.json  orchestrator_manager.sh  settings.json  (+5 more)
cli/: Cargo.toml  README.md  build.rs  landing.html
cli/src/: api.rs  api_axum.rs  ble_daemon.rs  ble_mesh.rs  ble_windows.rs  bootstrap.rs  cli.rs  config.rs  contacts.rs  history.rs  landing.html  ledger.rs  lib.rs  main.rs  main.rs.backup  server.rs  transport_api.rs  transport_bridge.rs
cli/tests/: integration.rs  integration_message_requests.rs
core/: Cargo.toml  README.md  build.rs  log.txt  out.txt  uniffi.toml
core/.cargo/: config.toml
core/examples/: nat_reflection_demo.rs
core/scripts/: progress_dashboard.sh
core/src/: api.udl  blocked_bridge.rs  contacts_bridge.rs  error.rs  iron_core.rs  lib.rs  mobile_bridge.rs  notification.rs  notification_defaults.rs  observability.rs  settings.rs  util.rs
core/src/abuse/: auto_block.rs  mod.rs  reputation.rs  spam_detection.rs
core/src/crypto/: backup.rs  encrypt.rs  kani_proofs.rs  mod.rs  negotiation.rs  proptest_harness.rs  ratchet.rs  session_manager.rs
core/src/crypto/pq/: hybrid.rs  mldsa.rs  mod.rs
core/src/drift/: compress.rs  envelope.rs  frame.rs  mod.rs  policy.rs  rate_limit.rs  relay.rs  sketch.rs  store.rs  sync.rs
core/src/dspy/: mod.rs  modules.rs  signatures.rs  teleprompt.rs
core/src/identity/: keys.rs  mod.rs  store.rs
core/src/message/: codec.rs  ephemeral.rs  mod.rs  types.rs
core/src/mobile/: auto_adjust.rs  ios_strategy.rs  mod.rs  service.rs  settings.rs
core/src/platform/: auto_adjust.rs  mod.rs  service.rs  settings.rs
core/src/privacy/: circuit.rs  cover.rs  mod.rs  onion.rs  padding.rs  timing.rs
core/src/relay/: bootstrap.rs  client.rs  delegate_prewarm.rs  findmy.rs  invite.rs  mod.rs  peer_exchange.rs  protocol.rs  server.rs
core/src/routing/: adaptive_ttl.rs  engine.rs  global.rs  local.rs  mod.rs  multipath.rs  negative_cache.rs  neighborhood.rs  optimized_engine.rs  reputation.rs  resume_prefetch.rs  smart_retry.rs  timeout_budget.rs
core/src/store/: backend.rs  blocked.rs  contacts.rs  dedup.rs  history.rs  inbox.rs  ledger_entry.rs  logs.rs  mod.rs  outbox.rs  relay_custody.rs  storage.rs  sweeper.rs  tracing_init.rs  transport_memory.rs
core/src/transport/: abstraction.rs  behaviour.rs  bootstrap.rs  capability.rs  circuit_breaker.rs  diagnostics.rs  dial_policy.rs  discovery.rs  escalation.rs  health.rs  internet.rs  manager.rs  mesh_routing.rs  mod.rs  multiport.rs  nat.rs  observation.rs  peer_broadcast.rs  reflection.rs  relay_health.rs  reputation.rs  swarm.rs  websocket.rs  wifi_aware.rs  wifi_direct.rs
core/src/transport/ble/: beacon.rs  gatt.rs  l2cap.rs  mod.rs  scanner.rs
core/src/transport/routing/: mod.rs
core/src/wasm_support/: mesh.rs  mod.rs  rpc.rs  storage.rs  transport.rs
core/tests/: integration_all_phases.rs  integration_backup.rs  integration_backup_continuity.rs  integration_contact_block.rs  integration_dial_policy.rs  integration_drift_mule.rs  integration_e00_drift_v2_diag.rs  integration_e00_ratchet_wiring.rs  integration_e2e.rs  integration_ironcore_roundtrip.rs  integration_ledger_convergence.rs  integration_mycorrhizal_routing.rs  integration_nat_reflection.rs  integration_offline_partition_matrix.rs  integration_outbox_flush_reconnect.rs  integration_pq_session.rs  integration_pq_verification_suite.rs  integration_ratchet_persistence.rs  integration_receipt_convergence.rs  integration_registration_protocol.rs  integration_relay_custody.rs  integration_relay_diagnostics.rs  integration_relay_onion.rs  integration_relay_onion.rs.disabled  integration_retry_lifecycle.rs  integration_wifi_aware.rs  integration_ws13_migration.rs  property_tests.rs  seam_freeze_onion.rs  test_address_observation.rs  test_mesh_routing.rs  test_multiport.rs  test_persistence_restart.rs
core/tests/kani/: ratchet_symmetry.rs
core/tests/mocks/: identity.rs  mod.rs  routing.rs  transport.rs
core/tests/property/: encryption_roundtrip.rs  identity_roundtrip.rs  message_serialization.rs  mod.rs
desktop_bridge/: Cargo.toml  build.rs  uniffi.toml
desktop_bridge/src/: api.udl  ble.rs  desktop_bridge.rs  desktop_bridge.udl  lib.rs  notification.rs  power.rs  socket_activation.rs  tray.rs  types.rs  xdg_paths.rs
desktop_bridge/tests/: xdg_paths_test.rs
mobile/: Cargo.toml  README.md  build.rs
mobile/src/: lib.rs
patch/if-watch/: Cargo.toml
patch/if-watch/src/: lib.rs
patch/libp2p-quic/: Cargo.toml
patch/libp2p-tcp/: Cargo.toml
patch/libp2p-tcp/src/: lib.rs
wasm/: CLI-WASM-logs.md  Cargo.toml  README.md  wasm_plan.md
wasm/pkg/: scmessenger_wasm.js
wasm/src/: browser_compatibility.js  connection_state.rs  daemon_bridge.rs  lib.rs  mesh.rs  notification_manager.rs  storage.rs  transport.rs  worker.rs
wasm/test/: notification_test.js  verification_test.js
(+2994 files in other folders)
