[workspace]
members = ["core", "mobile", "cli", "wasm"]
# wasm excluded from default members: requires wasm32 target
# Build with: cargo build -p scmessenger-wasm --target wasm32-unknown-unknown
# exclude = ["wasm"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["SC Team"]

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["sync", "macros", "rt", "time"] }
async-trait = "0.1"
futures = "0.3"

# libp2p for peer-to-peer networking
# Phase 0: TCP + QUIC for native, mDNS for LAN, Kademlia for WAN
# websocket deferred to Phase 1 (browser interop)
libp2p = { version = "0.53", features = [
  "noise",
  "yamux",
  "gossipsub",
  "kad",
  "autonat",
  "dcutr",
  "relay",
  "identify",
  "ping",
  "macros",
  "request-response",
  "cbor",
  "wasm-bindgen",
  "websocket-websys",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Crypto & Identity
# NOTE: cesride removed (was unused) — it pulled in vulnerable ed25519-dalek 1.0.1
# and curve25519-dalek 3.2.0 (issue #42 security audit)
ed25519-dalek = { version = "2.1", features = ["serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
curve25519-dalek = "4.1"
chacha20poly1305 = "0.10"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"
rand = "0.8"
zeroize = { version = "1.6", features = ["derive"] }

# Storage
sled = "0.34"

# UniFFI for mobile bindings
uniffi = { version = "0.27", features = ["cli"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Navigator",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
  "BinaryType",
  "RtcPeerConnection",
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcSessionDescription",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcPeerConnectionState",
  "Event",
] }
serde-wasm-bindgen = "0.6"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Testing
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
