[package]
name = "scmessenger-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "scmessenger-cli"
path = "src/main.rs"

[dependencies]
scmessenger-core = { path = "../core" }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
libp2p = { workspace = true, features = [
  "tcp",
  "quic",
  "dns",
  "mdns",
  "noise",
  "yamux",
  "tokio",
] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
colored = "2.1"
dirs = "5.0"
sled = { workspace = true }
chrono = "0.4"
uuid = { workspace = true }
warp = { version = "0.4.2", features = ["websocket", "server", "multipart"] }
tokio-stream = "0.1.18"
futures-util = "0.3.31"
hyper = { version = "0.14", features = ["full"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3.8"
