[package]
name = "scmessenger-desktop-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uniffi = { version = "0.31" }
scmessenger-core = { path = "../core" }
uniffi_bindgen = { version = "0.31", optional = true }
camino = { version = "1.1.6", optional = true }
thiserror = { workspace = true }

# XDG directory resolution
dirs = "5.0"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "4"
web-time = "1.1"

[features]
gen-bindings = ["dep:uniffi_bindgen", "dep:camino"]

[[bin]]
name = "gen_kotlin"
path = "src/bin/gen_kotlin.rs"
required-features = ["gen-bindings"]