[package]
name = "scmessenger-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
scmessenger-core = { path = "../core" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde-wasm-bindgen = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-wasm = "0.2"
parking_lot = "0.12"
futures = { workspace = true }

# WASM-specific dependencies
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
