[package]
name = "scmessenger-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
scmessenger-core = { path = "../core", features = ["wasm"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde-wasm-bindgen = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-wasm = "0.2"
parking_lot = "0.12"
futures = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
# UniFFI with wasm single-threaded feature for wasm32 target
uniffi = { workspace = true, features = ["wasm-unstable-single-threaded"] }

# WASM-specific dependencies
console_error_panic_hook = "0.1"
web-time = "1.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
