[package]
name = "libp2p-quic"
version = "0.42.0"
edition = "2021"
license = "MIT"
description = "QUIC transport for libp2p"

[dependencies]
futures = "0.3"
log = "0.4"
multiaddr = { version = "0.18" }
once_cell = "1"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["io"] }
traits = { version = "0" }

[features]
default = []

[patch.crates-io]
if-watch = { path = "../../if-watch" }
