[package]
name = "libp2p-tcp"
version = "0.41.0"
edition = "2021"
license = "MIT"
description = "TCP transport for libp2p"

[dependencies]
futures = "0.3"
log = "0.4"
multiaddr = { version = "0.18" }
network-interface = { version = "2", optional = true }
once_cell = "1"
pin-project-lite = "0.2"
tokio = { version = "1", features = ["io-util", "net"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
tower = { version = "0.4", default-features = false, features = ["util"] }
traits = { version = "0" }

[features]
default = []
network-interface = ["dep:network-interface"]

[patch.crates-io]
if-watch = { path = "../../if-watch" }
